# byrg

./: .gitignore  CMakeLists.txt  README.md  driver.sh
src/: Bitmap.cpp  Bitmap.h  Bitset.cpp  Bitset.h  Board.cpp  Board.h  Cell.cpp  Cell.h  Clock.cpp  Clock.h  Command.cpp  Command.h  CornerList.cpp  CornerList.h  Game.cpp  Game.h  Math.cpp  Math.h  Move.cpp  Move.h  MoveGenerator.cpp  MoveGenerator.h  MoveList.cpp  MoveList.h  PackedCell.cpp  PackedCell.h  Piece.cpp  Piece.h  PieceSet.cpp  PieceSet.h  PieceVariant.cpp  PieceVariant.h  Score.h  SearchResult.cpp  SearchResult.h  StrUtil.cpp  StrUtil.h  UndoInfo.h  globals.h  main.cpp
